# experimental_database

./:  Mental thoughts.md  .gitignore  About layer 5  BENCHMARKS.md  Cargo.toml  DESIGN.md  FULL_DESIGN.md  README.md  to_fix.md
.claude/: ralph-loop.local.md  settings.json
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/studio/: Cargo.toml  Dioxus.toml  bundle-macos.sh
apps/studio/src/: app.rs  main.rs  state.rs  theme.rs
apps/studio/src/components/: breadcrumb.rs  confirm_dialog.rs  hex_editor.rs  layer_tabs.rs  mod.rs  nav_sidebar.rs  sidebar.rs  toast.rs  toolbar.rs
apps/studio/src/engine/: db_handle.rs  engine_handle.rs  l6_handle.rs  mod.rs  storage_handle.rs
apps/studio/src/modules/: mod.rs
apps/studio/src/modules/btree/: mod.rs
apps/studio/src/modules/catalog/: mod.rs
apps/studio/src/modules/collections/: document_explorer.rs  index_manager.rs  mod.rs
apps/studio/src/modules/config_viewer/: mod.rs
apps/studio/src/modules/console/: mod.rs
apps/studio/src/modules/dashboard/: mod.rs
apps/studio/src/modules/docstore/: documents.rs  mod.rs  secondary.rs  vacuum.rs
apps/studio/src/modules/freelist/: mod.rs
apps/studio/src/modules/heap/: mod.rs
apps/studio/src/modules/internals/: mod.rs
apps/studio/src/modules/internals/console/: mod.rs
apps/studio/src/modules/internals/docstore/: documents.rs  key_tools.rs  secondary.rs
apps/studio/src/modules/internals/query/: filter_test.rs  range_tools.rs  scan.rs
apps/studio/src/modules/internals/storage/: catalog.rs  freelist.rs  heap.rs  pages.rs  wal.rs
apps/studio/src/modules/overview/: mod.rs
apps/studio/src/modules/pages/: mod.rs
apps/studio/src/modules/query/: mod.rs  scan.rs
apps/studio/src/modules/query_workbench/: mod.rs
apps/studio/src/modules/storage/: btree.rs  catalog.rs  heap.rs  mod.rs  pages.rs
apps/studio/src/modules/subscriptions/: mod.rs
apps/studio/src/modules/wal/: mod.rs
benches/: db.rs
client/: client.ts  example.ts  package-lock.json
crates/core/: Cargo.toml
crates/core/src/: encoding.rs  field_path.rs  filter.rs  lib.rs  types.rs  ulid.rs
crates/database/: Cargo.toml  README.md
crates/database/benches/: database.rs
crates/database/src/: catalog_cache.rs  catalog_mutation_handler.rs  catalog_persistence.rs  catalog_recovery.rs  catalog_tracker.rs  config.rs  database.rs  error.rs  index_resolver.rs  lib.rs  subscription.rs  system_database.rs  transaction.rs
crates/database/tests/: concurrency.rs  durability.rs  integration.rs  stress.rs
crates/docstore/: Cargo.toml  README.md
crates/docstore/src/: array_indexing.rs  index_builder.rs  key_encoding.rs  lib.rs  primary_index.rs  secondary_index.rs  vacuum.rs  version_resolution.rs
crates/docstore/tests/: integration.rs
crates/query/: Cargo.toml  README.md
crates/query/src/: access.rs  lib.rs  merge.rs  post_filter.rs  range_encoder.rs  scan.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: backend.rs  btree.rs  buffer_pool.rs  catalog_btree.rs  checkpoint.rs  dwb.rs  engine.rs  error.rs  free_list.rs  heap.rs  lib.rs  main.rs  page.rs  posting.rs  recovery.rs  util.rs  vacuum.rs  wal.rs
crates/storage/src/btree/: error.rs  traits.rs  types.rs
crates/storage/src/buffer_pool/: error.rs  traits.rs
crates/storage/src/engine/: error.rs  traits.rs  types.rs
crates/storage/src/heap/: error.rs  traits.rs
crates/storage/src/page/: error.rs  mod.rs  slotted.rs  traits.rs  types.rs
crates/storage/src/pager/: error.rs  traits.rs  types.rs
crates/storage/src/wal/: error.rs  traits.rs  types.rs
crates/storage/tests/: integration.rs
crates/tx/: Cargo.toml  README.md
crates/tx/src/: commit.rs  commit_log.rs  lib.rs  occ.rs  read_set.rs  subscriptions.rs  timestamp.rs  write_set.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  prompts.txt  read-set.md  studio-plan.md
docs/plan/: async-audit.md
docs/plan/01_storage/: 00-overview.md  01-types.md  02-page-format.md  02-page.md  03-wal.md  04-buffer-pool.md  05-free-list.md  05-freelist.md  06-btree.md  06-key-encoding.md  07-btree.md  07-heap.md  08-catalog.md  08-heap.md  09-catalog.md  09-dwb-checkpoint-recovery.md  10-engine.md  10-file-header.md  11-checkpoint-recovery.md  11-dependencies.md  12-engine.md  12-traits.md  13-key-encoding.md  13-traits.md  14-implementation-phases.md  15-test-cases.md
docs/plan/database/: 00-overview.md  01-b1-config.md  02-b2-catalog-cache.md  03-b3-index-resolver.md  04-b4-catalog-tracker.md  05-b5-transaction.md  06-b6-database.md  07-b7-subscription.md  08-b8-system-database.md  09-error-types.md  10-durability.md  11-test-plan.md
docs/plan/docstore/: 00-overview.md  01-d1-key-encoding.md  02-d2-version-resolution.md  03-d3-primary-index.md  04-d4-secondary-index.md  05-d5-array-indexing.md  06-d6-index-builder.md  07-d7-vacuum.md
docs/plan/overview/: 00-architecture-overview.md  01-layer1-core-types.md  02-layer2-storage-engine.md  03-layer3-document-store.md  03-layer3-indexing.md  04-layer4-query-engine.md  (+12 more)
examples/: embedded.rs  replication.rs  subscriptions.rs
javascript/client/: README.md  index.ts  package.json
javascript/studio/: tsconfig.json
src/: VIBE_README.md  catalog.rs  db.rs  doc.rs  filter.rs  index.rs  lib.rs  main.rs  mvcc.rs  protocol.rs  query.rs  replication.rs  server.rs  subs.rs  tx.rs  types.rs  vibe_db.rs
src/storage/: engine.rs  mod.rs  wal.rs
storage/: Cargo.toml  README.md
storage/src/: backend.rs  btree.rs  buffer_pool.rs  catalog.rs  catalog_btree.rs  checkpoint.rs  dwb.rs  engine.rs  file_header.rs  free_list.rs  heap.rs  key_encoding.rs  lib.rs  main.rs  page.rs  posting.rs  recovery.rs  types.rs  util.rs  wal.rs
storage/src/btree/: cursor.rs  delete.rs  insert.rs  mod.rs  node.rs  scan.rs
storage/src/wal/: mod.rs  reader.rs  record.rs  segment.rs  writer.rs
storage/tests/: integration.rs
tests/: integration.rs  ws_integration.rs
(+44 files in other folders)
