[package]
name = "experimental_database"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dashmap = "6"
crc32fast = "1"
bytes = "1"
tracing = "0.1"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
