[package]
name = "experimental_database"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dashmap = "6"
crc32fast = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
tempfile = "3"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "db"
harness = false
