[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
crc32c = "0.6"
bson = "2"
ulid = "1"
bytes = "1"
thiserror = "2"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
