[package]
name = "exdb-studio"
version.workspace = true
edition.workspace = true

[dependencies]
exdb = { workspace = true }
exdb-core = { workspace = true }
exdb-docstore = { workspace = true }
exdb-storage = { workspace = true }
exdb-query = { workspace = true }
dioxus = { version = "0.7", features = ["desktop"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zerocopy = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tokio-stream = { workspace = true }
rfd = "0.15"
