[package]
name = "exdb-docstore"
version.workspace = true
edition.workspace = true

[dependencies]
exdb-core = { workspace = true }
exdb-storage = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "rt"] }
async-trait = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = { workspace = true }
