[package]
name = "exdb-storage"
version.workspace = true
edition.workspace = true

[dependencies]
exdb-core = { workspace = true }
zerocopy = { workspace = true }
crc32fast = { workspace = true }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "fs"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
async-stream = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = { workspace = true }
