[package]
name = "exdb-tx"
version.workspace = true
edition.workspace = true

[dependencies]
exdb-core = { workspace = true }
exdb-storage = { workspace = true }
exdb-docstore = { workspace = true }
exdb-query = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true }
