[package]
name = "exdb-tx"
version.workspace = true
edition.workspace = true

[dependencies]
exdb-core     = { workspace = true }
exdb-storage  = { workspace = true }
exdb-docstore = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
parking_lot   = { workspace = true }
async-trait   = { workspace = true }

[dev-dependencies]
tokio    = { version = "1", features = ["full", "test-util"] }
tempfile = { workspace = true }
